ポートフォリオ_iwasawa13

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
               <div>
                 <img
                   class="works_item"
-                  src="./images/1x/works_01_pc.png"
+                  src="./images/1x/top_pf@2x.png"
                   alt="ポートフォリオのモックアップ"
                 />
               </div>
@@ -214,7 +214,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
               <div>
                 <img
                   class="works_item"
-                  src="./images/1x/works_02_pc.png"
+                  src="./images/1x/top_hairsalon@2x.png"
                   alt="ヘアサロンサイトのモックアップ"
                 />
               </div>
@@ -251,7 +251,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
               <div class="order">
                 <img
                   class="works_item"
-                  src="./images/1x/works_03_pc.png"
+                  src="./images/1x/top_cafesite@2x.png"
                   alt="ポートフォリオのモックアップ"
                 />
               </div>
@@ -289,23 +289,28 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
             >
               <defs>
                 <style>
-                  .cls-1,
-                  .cls-2 {
+                  .roop02-1,
+                  .roop02-2 {
                     fill: none;
                   }
 
-                  .cls-2 {
+                  .roop02-2 {
                     stroke: url(#_名称未設定グラデーション_3);
                     stroke-miterlimit: 10;
                     stroke-width: 1.16px;
                   }
 
-                  .cls-3 {
-                    clip-path: url(#clippath);
+                  .roop02-3 {
+                    clip-path: url(#clippath02);
                   }
                 </style>
-                <clipPath id="clippath">
-                  <rect class="cls-1" y="0" width="1335.46" height="1173.81" />
+                <clipPath id="clippath02">
+                  <rect
+                    class="roop02-1"
+                    y="0"
+                    width="1335.46"
+                    height="1173.81"
+                  />
                 </clipPath>
                 <linearGradient
                   id="_名称未設定グラデーション_3"
@@ -323,9 +328,9 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
                 </linearGradient>
               </defs>
               <g id="_編集_ワイヤーフレーム" data-name="編集_ワイヤーフレーム">
-                <g class="cls-3">
+                <g class="roop02-3">
                   <path
-                    class="cls-2"
+                    class="roop02-2"
                     d="M-64.12-21.97C56.78,131.28,135.34,312.81,233.91,481.28c82.15,140.41,179.41,273.17,299.1,383.35,119.69,110.18,262.71,197.34,419.89,239.3,45.5,12.15,95.54,23.35,139.38-.15,30.22-16.2,53.06-45.57,61.33-78.84,11.18-45.01-4.3-93.6-32.13-130.71-81.36-108.48-242.72-149.93-365.56-189.67-143.81-46.52-287.14-89.76-426.25-149.09-138.51-59.08-273.54-126.33-404.14-201.31-32.97-18.93-65.97-38.07-98.46-57.78"
                   />
                 </g>
@@ -340,7 +345,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
         <div>
           <h2 class="about_header">About</h2>
           <div class="about_wrapper">
-            <div calss="about_img_wrapper">
+            <div class="about_img_wrapper">
               <img
                 class="about_img"
                 src="./images/1x/about@2x.png"
@@ -478,23 +483,22 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
         >
           <defs>
             <style>
-              .cls-1,
-              .cls-2 {
+              .roop03-1,
+              .roop03-2 {
                 fill: none;
               }
-
-              .cls-2 {
+              .roop03-2 {
                 stroke: url(#_名称未設定グラデーション_126);
                 stroke-miterlimit: 10;
                 stroke-width: 1.07px;
               }
 
-              .cls-3 {
-                clip-path: url(#clippath);
+              .roop03-3 {
+                clip-path: url(#clippath03);
               }
             </style>
-            <clipPath id="clippath">
-              <rect class="cls-1" width="1301.44" height="1180" />
+            <clipPath id="clippath03">
+              <rect class="roop03-1" width="1301.44" height="1180" />
             </clipPath>
             <linearGradient
               id="_名称未設定グラデーション_126"
@@ -512,9 +516,9 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
             </linearGradient>
           </defs>
           <g id="_編集_ワイヤーフレーム" data-name="編集_ワイヤーフレーム">
-            <g class="cls-3">
+            <g class="roop03-3">
               <path
-                class="cls-2"
+                class="roop03-2"
                 d="M1333.48,192.07c-118.58,134.2-199.81,296.46-298.72,445.75-82.43,124.42-178.3,241.06-293.57,335.87-115.27,94.81-250.73,167.34-396.85,197.74-42.3,8.8-88.71,16.51-127.67-7.26-26.85-16.38-46.28-44.45-52.15-75.35-7.94-41.8,8.72-85.52,36.11-118.09,80.07-95.21,230-124.93,344.55-155.06,134.11-35.26,267.61-67.55,398.07-114.78,129.9-47.03,257.02-101.74,380.48-163.74,31.17-15.66,62.38-31.5,93.14-47.9"
               />
             </g>
