--- a/works_all.html
+++ b/works_all.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <!-- あしらいにアニメーションをつけるために以下を読み込む -->
+    <script src="
+https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
+"></script>
   </head>
   <body id="works_all_top">
     <!-- カーソルの見た目を変更 -->
@@ -94,7 +98,7 @@
                 <a href="website_01.html"
                   ><img
                     class="flex_item_img"
-                    src="./images/1x/works_all01-80.jpg"
+                    src="./images/1x/works_all01@2x-80.jpg"
                     alt="作品の画像1"
                 /></a>
               </div>
@@ -113,7 +117,7 @@
               <a href="#"
                 ><img
                   class="flex_item_img"
-                  src="./images/1x/works_all02-80.jpg"
+                  src="./images/1x/works_all02@2x-80.jpg"
                   alt="作品の画像2"
               /></a>
             </div>
@@ -126,7 +130,7 @@
               <a href="banner_01.html"
                 ><img
                   class="flex_item_img"
-                  src="./images/1x/works_all03-80.jpg"
+                  src="./images/1x/works_all03@2x-80.jpg"
                   alt="作品の画像3"
               /></a>
             </div>
@@ -134,11 +138,71 @@
 
             <!-- あしらい4 -->
             <div class="roop_wrapper04">
-              <img
+              <!-- <img
                 class="roop_design04"
                 src="./images/1x/roop_design04.svg"
                 alt="∞マークの装飾"
-              />
+              /> -->
+              <svg
+                id="layer04"
+                class="roop_design03"
+                data-name="レイヤー 2"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                viewBox="0 0 1227.04 970.79"
+              >
+                <defs>
+                  <style>
+                    .roop04-1,
+                    .roop04-2 {
+                      fill: none;
+                    }
+
+                    .roop04-2 {
+                      stroke: url(#_名称未設定グラデーション_126);
+                      stroke-miterlimit: 10;
+                      stroke-width: 1.01px;
+                    }
+
+                    .roop04-3 {
+                      clip-path: url(#clippath04);
+                    }
+                  </style>
+                  <clipPath id="clippath04">
+                    <rect
+                      class="roop04-1"
+                      x="0"
+                      width="1227.04"
+                      height="970.79"
+                    />
+                  </clipPath>
+                  <linearGradient
+                    id="_名称未設定グラデーション_126"
+                    data-name="名称未設定グラデーション 126"
+                    x1="548.72"
+                    y1="524.75"
+                    x2="1807.24"
+                    y2="524.75"
+                    gradientTransform="translate(-544.98 111.1) rotate(-4.91)"
+                    gradientUnits="userSpaceOnUse"
+                  >
+                    <stop offset="0" stop-color="#181e4d" />
+                    <stop offset=".57" stop-color="#5a95b4" />
+                    <stop offset="1" stop-color="#8aecff" />
+                  </linearGradient>
+                </defs>
+                <g
+                  id="_編集_ワイヤーフレーム"
+                  data-name="編集_ワイヤーフレーム"
+                >
+                  <g class="roop04-3">
+                    <path
+                      class="roop04-2"
+                      d="M1254.64,124.08c-125.66,112.66-220.35,256.73-329.73,386.23-91.16,107.92-193.75,206.75-311.54,282.37-117.79,75.61-251.46,127.49-389.78,137.94-40.04,3.03-83.74,4.49-116.72-23.04-22.73-18.97-37.19-48.13-38.82-78.26-2.2-40.76,18.5-80.24,47.71-107.75,85.41-80.44,227.16-89.77,336.38-103.95,127.85-16.6,254.79-30.44,380.75-58.88,125.42-28.33,249.22-64.29,370.54-107.67,30.63-10.95,61.32-22.08,91.66-33.79"
+                    />
+                  </g>
+                </g>
+              </svg>
             </div>
           </div>
         </div>
@@ -215,11 +279,69 @@
     <footer>
       <!-- あしらい5 -->
       <div class="roop_wrapper05">
-        <img
+        <!-- <img
           class="roop_design05"
           src="./images/1x/roop_design05.svg"
           alt="∞マークの装飾"
-        />
+        /> -->
+        <svg
+          id="layer05"
+          class="roop_design05"
+          data-name="レイヤー 2"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 1347 735"
+        >
+          <defs>
+            <style>
+              .roop05-1,
+              .roop05-2 {
+                fill: none;
+              }
+
+              .roop05-2 {
+                stroke: url(#_名称未設定グラデーション_12);
+                stroke-miterlimit: 10;
+                stroke-width: 1.08px;
+              }
+
+              .roop05-3 {
+                clip-path: url(#clippath05);
+              }
+            </style>
+            <clipPath id="clippath05">
+              <rect class="roop05-1" width="1347" height="735" />
+            </clipPath>
+            <linearGradient
+              id="_名称未設定グラデーション_12"
+              data-name="名称未設定グラデーション 12"
+              x1="258.5"
+              y1="-31.51"
+              x2="1817.83"
+              y2="-31.51"
+              gradientTransform="translate(1602.62 512.04) rotate(-172.1) scale(1 -1)"
+              gradientUnits="userSpaceOnUse"
+            >
+              <stop offset="0" stop-color="#8aecff" />
+              <stop offset=".19" stop-color="#88e8fc" />
+              <stop offset=".33" stop-color="#83dff4" />
+              <stop offset=".46" stop-color="#7acfe6" />
+              <stop offset=".58" stop-color="#6db8d2" />
+              <stop offset=".69" stop-color="#5d9ab8" />
+              <stop offset=".8" stop-color="#497699" />
+              <stop offset=".9" stop-color="#314c75" />
+              <stop offset="1" stop-color="#181e4d" />
+            </linearGradient>
+          </defs>
+          <g id="_編集_ワイヤーフレーム" data-name="編集_ワイヤーフレーム">
+            <g class="roop05-3">
+              <path
+                class="roop05-2"
+                d="M-119.81-64.11C30.7,44.17,140.36,179.43,269.39,302.18c107.53,102.31,229.98,196.93,372.97,271.24,142.99,74.31,307.41,127.88,480.31,144.13,50.05,4.7,104.78,8.17,147.92-15.18,29.73-16.09,49.72-41.82,53.68-69.05,5.35-36.85-18.12-73.65-53.02-100.03-102.06-77.11-279.33-92.5-415.47-110.7-159.37-21.3-317.76-40.06-474-72.01-155.57-31.82-308.62-70.48-458.09-115.74-37.74-11.43-75.53-23.02-112.87-35.12"
+              />
+            </g>
+          </g>
+        </svg>
       </div>
     </footer>
 
@@ -287,6 +409,50 @@
           $(".mail_icon").removeClass("invisible");
           $(".scroll_down").removeClass("invisible");
         });
+
+        //あしらい4
+        const vivus04 = new Vivus("layer04", {
+          duration: 350,
+          start: "autostart",
+          type: "scenario",
+          pathTimingFunction: Vivus.EASE_OUT,
+        });
+
+        function playForward04() {
+          vivus04.play(1, function () {
+            setTimeout(playBackward04, 350);
+          });
+        }
+
+        function playBackward04() {
+          vivus04.play(-1, function () {
+            setTimeout(playForward04, 350);
+          });
+        }
+
+        playForward04();
+
+        //あしらい5
+        const vivus05 = new Vivus("layer05", {
+          duration: 350,
+          start: "autostart",
+          type: "scenario",
+          pathTimingFunction: Vivus.EASE_OUT,
+        });
+
+        function playForward05() {
+          vivus05.play(1, function () {
+            setTimeout(playBackward05, 350);
+          });
+        }
+
+        function playBackward05() {
+          vivus05.play(-1, function () {
+            setTimeout(playForward05, 350);
+          });
+        }
+
+        playForward05();
       });
     </script>
   </body>
