--- a/about_me.html
+++ b/about_me.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <!-- あしらいにアニメーションをつけるために以下を読み込む -->
+    <script src="
+https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
+"></script>
   </head>
   <body>
       <!-- カーソルの見た目を変更 -->
@@ -343,19 +347,91 @@
     <footer class="about_footer">
         <!-- あしらい09-->
       <div class="roop_wrapper09">
-        <img
+        <!-- <img
           class="roop_design09"
           src="./images/1x/roop_design10.svg"
           alt="∞マークの装飾"
-        />
+        /> -->
+        <svg 
+        id="layer10"
+        class="roop_design10"
+        data-name="レイヤー 2" 
+        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1301.44 1180">
+  <defs>
+    <style>
+      .roop10-1, .roop10-2 {
+        fill: none;
+      }
+
+      .roop10-2 {
+        stroke: url(#_名称未設定グラデーション_126);
+        stroke-miterlimit: 10;
+        stroke-width: 1.07px;
+      }
+
+      .roop10-3 {
+        clip-path: url(#clippath10);
+      }
+    </style>
+    <clipPath id="clippath10">
+      <rect class="roop10s-1" width="1301.44" height="1180"/>
+    </clipPath>
+    <linearGradient id="_名称未設定グラデーション_126" data-name="名称未設定グラデーション 126" x1="955.9" y1="1983.27" x2="2308.94" y2="1983.27" gradientTransform="translate(-1252.29 -886.64) rotate(-12.48)" gradientUnits="userSpaceOnUse">
+      <stop offset="0" stop-color="#181e4d"/>
+      <stop offset=".57" stop-color="#5a95b4"/>
+      <stop offset="1" stop-color="#8aecff"/>
+    </linearGradient>
+  </defs>
+  <g id="_編集_ワイヤーフレーム" data-name="編集_ワイヤーフレーム">
+    <g class="roop10-3">
+      <path class="roop10-2" d="M1333.48,192.07c-118.58,134.2-199.81,296.46-298.72,445.75-82.43,124.42-178.3,241.06-293.57,335.87-115.27,94.81-250.73,167.34-396.85,197.74-42.3,8.8-88.71,16.51-127.67-7.26-26.85-16.38-46.28-44.45-52.15-75.35-7.94-41.8,8.72-85.52,36.11-118.09,80.07-95.21,230-124.93,344.55-155.06,134.11-35.26,267.61-67.55,398.07-114.78,129.9-47.03,257.02-101.74,380.48-163.74,31.17-15.66,62.38-31.5,93.14-47.9"/>
+    </g>
+  </g>
+</svg>
       </div>
       <!-- あしらい10-->
       <div class="roop_wrapper10">
-        <img
+        <!-- <img
           class="roop_design10"
           src="./images/1x/roop_design10.svg"
           alt="∞マークの装飾"
-        />
+        /> -->
+        <svg 
+        id="layer10"
+        class="roop_design10"
+        data-name="レイヤー 2" 
+        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1301.44 1180">
+  <defs>
+    <style>
+      .roop10-1, .roop10-2 {
+        fill: none;
+      }
+
+      .roop10-2 {
+        stroke: url(#_名称未設定グラデーション_126);
+        stroke-miterlimit: 10;
+        stroke-width: 1.07px;
+      }
+
+      .roop10-3 {
+        clip-path: url(#clippath10);
+      }
+    </style>
+    <clipPath id="clippath10">
+      <rect class="roop10s-1" width="1301.44" height="1180"/>
+    </clipPath>
+    <linearGradient id="_名称未設定グラデーション_126" data-name="名称未設定グラデーション 126" x1="955.9" y1="1983.27" x2="2308.94" y2="1983.27" gradientTransform="translate(-1252.29 -886.64) rotate(-12.48)" gradientUnits="userSpaceOnUse">
+      <stop offset="0" stop-color="#181e4d"/>
+      <stop offset=".57" stop-color="#5a95b4"/>
+      <stop offset="1" stop-color="#8aecff"/>
+    </linearGradient>
+  </defs>
+  <g id="_編集_ワイヤーフレーム" data-name="編集_ワイヤーフレーム">
+    <g class="roop10-3">
+      <path class="roop10-2" d="M1333.48,192.07c-118.58,134.2-199.81,296.46-298.72,445.75-82.43,124.42-178.3,241.06-293.57,335.87-115.27,94.81-250.73,167.34-396.85,197.74-42.3,8.8-88.71,16.51-127.67-7.26-26.85-16.38-46.28-44.45-52.15-75.35-7.94-41.8,8.72-85.52,36.11-118.09,80.07-95.21,230-124.93,344.55-155.06,134.11-35.26,267.61-67.55,398.07-114.78,129.9-47.03,257.02-101.74,380.48-163.74,31.17-15.66,62.38-31.5,93.14-47.9"/>
+    </g>
+  </g>
+</svg>
       </div>
       <p class="about_copyright">&copy;2025 Kiyori Iwasawa</p>
     </footer>
@@ -424,6 +500,28 @@
           $(".mail_icon").removeClass("invisible");
           $(".scroll_down").removeClass("invisible");
         });
+
+        //あしらい10
+        const vivus10 = new Vivus("layer10", {
+          duration: 350,
+          start: "autostart",
+          type: "scenario",
+          pathTimingFunction: Vivus.EASE_OUT,
+        });
+
+        function playForward10() {
+          vivus10.play(1, function () {
+            setTimeout(playBackward10, 350);
+          });
+        }
+
+        function playBackward10() {
+          vivus10.play(-1, function () {
+            setTimeout(playForward10, 350);
+          });
+        }
+
+        playForward10();
       });
     </script>
   </body>
