--- a/website_01.html
+++ b/website_01.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <!-- あしらいにアニメーションをつけるために以下を読み込む -->
+    <script src="
+https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
+"></script>
   </head>
   <body class="works_website01">
     <!-- カーソルの見た目を変更 -->
@@ -77,11 +81,61 @@
     <main class="site_main">
       <!-- あしらい8-->
       <div class="roop_wrapper08">
-        <img
+        <!-- <img
           class="roop_design08"
           src="./images/1x/roop_design08.svg"
           alt="∞マークの装飾"
-        />
+        /> -->
+        <svg
+          id="layer08"
+          class="roop_design08"
+          data-name="レイヤー 2"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 1302.01 965.23"
+        >
+          <defs>
+            <style>
+              .roop08-1,
+              .roop08-2 {
+                fill: none;
+              }
+
+              .roop08-2 {
+                stroke: url(#_名称未設定グラデーション_126);
+                stroke-miterlimit: 10;
+              }
+
+              .roop08-3 {
+                clip-path: url(#clippath08);
+              }
+            </style>
+            <clipPath id="clippath08">
+              <rect class="roop08-1" width="1302.01" height="965.23" />
+            </clipPath>
+            <linearGradient
+              id="_名称未設定グラデーション_126"
+              data-name="名称未設定グラデーション 126"
+              x1="64.53"
+              y1="577.09"
+              x2="1378.81"
+              y2="464.13"
+              gradientUnits="userSpaceOnUse"
+            >
+              <stop offset="0" stop-color="#181e4d" />
+              <stop offset=".57" stop-color="#5a95b4" />
+              <stop offset="1" stop-color="#8aecff" />
+            </linearGradient>
+          </defs>
+          <g id="_編集_ワイヤーフレーム" data-name="編集_ワイヤーフレーム">
+            <g class="roop08-3">
+              <path
+                class="roop08-2"
+                d="M1330.96,104.89c-131.83,114.47-231.17,260.87-345.93,392.45-95.64,109.66-203.27,210.09-326.84,286.91-123.57,76.83-263.81,129.54-408.93,140.16-42.01,3.08-87.85,4.57-122.45-23.41-23.85-19.28-39.02-48.9-40.73-79.52-2.31-41.42,19.41-81.53,50.06-109.49,89.61-81.74,238.32-91.22,352.9-105.63,134.13-16.86,267.31-30.93,399.45-59.83,131.58-28.78,261.46-65.33,388.74-109.4,32.14-11.13,64.33-22.43,96.17-34.33"
+              />
+            </g>
+          </g>
+        </svg>
       </div>
       <section class="site_wrapper01">
         <p>#Website</p>
@@ -157,11 +211,69 @@
     <footer class="works_banner_footer">
       <!-- あしらい7 -->
       <div class="roop_wrapper07">
-        <img
+        <!-- <img
           class="roop_design07"
           src="./images/1x/roop_design06.svg"
           alt="∞マークの装飾"
-        />
+        /> -->
+        <svg
+          id="layer07"
+          class="roop_design07"
+          data-name="レイヤー 2"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          viewBox="0 0 1340.42 1032.19"
+        >
+          <defs>
+            <style>
+              .roop07-1,
+              .roop07-2 {
+                fill: none;
+              }
+
+              .roop07-2 {
+                stroke: url(#_名称未設定グラデーション_12);
+                stroke-miterlimit: 10;
+                stroke-width: 1.1px;
+              }
+
+              .roop07-3 {
+                clip-path: url(#clippath07);
+              }
+            </style>
+            <clipPath id="clippath07">
+              <rect class="roop07-1" width="1340.42" height="1032.19" />
+            </clipPath>
+            <linearGradient
+              id="_名称未設定グラデーション_12"
+              data-name="名称未設定グラデーション 12"
+              x1="-3262.51"
+              y1="219.56"
+              x2="-1663.21"
+              y2="219.56"
+              gradientTransform="translate(-1727.92 -379.63) rotate(-164.8) scale(1 -1)"
+              gradientUnits="userSpaceOnUse"
+            >
+              <stop offset="0" stop-color="#8aecff" />
+              <stop offset=".19" stop-color="#88e8fc" />
+              <stop offset=".33" stop-color="#83dff4" />
+              <stop offset=".46" stop-color="#7acfe6" />
+              <stop offset=".58" stop-color="#6db8d2" />
+              <stop offset=".69" stop-color="#5d9ab8" />
+              <stop offset=".8" stop-color="#497699" />
+              <stop offset=".9" stop-color="#314c75" />
+              <stop offset="1" stop-color="#181e4d" />
+            </linearGradient>
+          </defs>
+          <g id="_編集_ワイヤーフレーム" data-name="編集_ワイヤーフレーム">
+            <g class="roop07-3">
+              <path
+                class="roop07-2"
+                d="M-67-22C72,107.78,165.94,259.67,281.19,401.37c96.06,118.09,208.29,230.31,344.07,324.55,135.78,94.24,296.07,170.17,469.85,209.23,50.31,11.31,105.53,21.97,152.46,3.84,32.34-12.49,56.03-36.06,63.61-63.25,10.25-36.79-8.83-77.29-40.9-108.67-93.78-91.75-272.11-130.51-408.23-166.77-159.35-42.44-318.04-82.17-472.82-135.04-154.12-52.64-304.78-111.93-450.94-177.45-36.9-16.54-73.84-33.26-110.24-50.44"
+              />
+            </g>
+          </g>
+        </svg>
       </div>
     </footer>
 
@@ -229,6 +341,50 @@
           $(".mail_icon").removeClass("invisible");
           $(".scroll_down").removeClass("invisible");
         });
+
+        //あしらい7
+        const vivus07 = new Vivus("layer07", {
+          duration: 350,
+          start: "autostart",
+          type: "scenario",
+          pathTimingFunction: Vivus.EASE_OUT,
+        });
+
+        function playForward07() {
+          vivus07.play(1, function () {
+            setTimeout(playBackward07, 350);
+          });
+        }
+
+        function playBackward07() {
+          vivus07.play(-1, function () {
+            setTimeout(playForward07, 350);
+          });
+        }
+
+        playForward07();
+
+        //あしらい8
+        const vivus08 = new Vivus("layer08", {
+          duration: 350,
+          start: "autostart",
+          type: "scenario",
+          pathTimingFunction: Vivus.EASE_OUT,
+        });
+
+        function playForward08() {
+          vivus08.play(1, function () {
+            setTimeout(playBackward08, 350);
+          });
+        }
+
+        function playBackward08() {
+          vivus08.play(-1, function () {
+            setTimeout(playForward08, 350);
+          });
+        }
+
+        playForward08();
       });
     </script>
   </body>
