ポートフォリオ_iwasawa13

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
         </h1>
         <picture>
           <source
-            srcset="./images/1x/FV_SP@3x-80.jpg"
+            srcset="./images/1x/fv_sp@3x-80.jpg"
             media="(max-width:750px)"
           />
           <img
@@ -250,7 +250,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
 
               <div class="order">
                 <img
-                  class="works_item"
+                  class="works_item sp_margin01"
                   src="./images/1x/top_cafesite@2x.png"
                   alt="ポートフォリオのモックアップ"
                 />
@@ -267,7 +267,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
         </div> -->
           <div class="view_all_wrapper">
             <a href="works_all.html">
-              <img src="./images/1x/ViewAllボタン.svg" alt="ボタンの画像" />
+              <img src="./images/1x/view_all_btn.svg" alt="ボタンの画像" />
               <p><span class="view_all_btn_span">View all Works</span></p>
             </a>
           </div>
@@ -457,7 +457,7 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
             <!-- 送信ボタン -->
             <div class="c-form_submit">
               <button type="submit">
-                <img src="./images/1x/送信ボタン.svg" alt="ボタンの画像" />
+                <img src="./images/1x/send_mail_btn.svg" alt="ボタンの画像" />
                 <p><span class="c-form_span">内容を送信する</span></p>
               </button>
             </div>
