--- a/website_01.html
+++ b/website_01.html
@@ -142,7 +142,12 @@ https://cdn.jsdelivr.net/npm/vivus@0.4.6/dist/vivus.min.js
         <h3>ポートフォリオ</h3>
 
         <div class="site_img">
-          <video src="./images/1x/works_pf.mov" autoplay muted></video>
+          <video
+            src="./images/1x/works_pf.mov"
+            playsinline
+            autoplay
+            muted
+          ></video>
         </div>
 
         <p class="site_sub_category">[ Category : design, coding ]</p>
